# lit_math

./: Cargo.toml  README.md
benches/: black_scholes.rs  bmk.rs  exp_benchmark.rs
src/: constants.rs  exp.rs  lib.rs  linalg.rs  lit.rs  log.rs  normdist.rs  root.rs  trig.rs  unroller.rs
tests/: tst.rs
