[package]
name = "lit_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = false

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "exp_benchmark"
hardness = false
path = "benches/exp_benchmark.rs"