[package]
name = "lit_math"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
author = "Matthew Kolbe"

[build]
rustflags = "-C target-cpu=native"

[dependencies]
rayon = "1.5.3"
paste = "1.0.9"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
approx = "0.5.1"
statrs = "0.16"
rayon = "1.5.3"

[[bench]]
name = "bmk"
harness = false
path = "benches/bmk.rs"